--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <link rel="stylesheet" href="styles.css">
   <head>
     <meta charset="utf-8">
     <title>Hello, this is a test</title>
