Edited for friends to see

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hello, this is a test</title>
   </head>
   <body>
-    Hi, this is a test but 3rd
+    <p>Bitch you clicked on this didn't you</p>
+    <img src="./endme.jpg" alt="A terrifing monster">
   </body>
 </html>
