--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>Bitch you clicked on this didn't you</p>
-    <img src="./endme.jpg" alt="A terrifing monster">
+    <img src="[anger].JPG" alt="anger">
   </body>
 </html>
