--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <script type = "text/javascript" src="scrip.js"></script>
     <meta charset="utf-8">
-    <title>Hello, this is a test</title>
+    <title>Stationers Hash Gen</title>
   </head>
   <body>
     <label>Prefix: </label><input type="text" id="prefix" value="LED-{}-"><br>
